[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node.gd" type="Script" id=1]
[ext_resource path="res://slimy_quest.png" type="Texture" id=2]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 280, 224 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 288, 392 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="Red Background" type="ColorRect" parent="."]
margin_left = 632.0
margin_top = 136.0
margin_right = 992.0
margin_bottom = 176.0
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Red" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 136.0
margin_right = 984.0
margin_bottom = 176.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green Background" type="ColorRect" parent="."]
margin_left = 632.0
margin_top = 176.0
margin_right = 992.0
margin_bottom = 216.0
color = Color( 0, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Green" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 176.0
margin_right = 984.0
margin_bottom = 216.0
max_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue Background" type="ColorRect" parent="."]
margin_left = 632.0
margin_top = 216.0
margin_right = 992.0
margin_bottom = 256.0
color = Color( 0, 0, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blue" type="HSlider" parent="."]
margin_left = 640.0
margin_top = 216.0
margin_right = 984.0
margin_bottom = 256.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="value_changed" from="Red" to="." method="_on_Red_value_changed"]
[connection signal="value_changed" from="Green" to="." method="_on_Green_value_changed"]
[connection signal="value_changed" from="Blue" to="." method="_on_Blue_value_changed"]
